[package]
name = "encointer-api-client-extension"
version = "0.8.2"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }

# encointer deps
encointer-ceremonies-assignment = { workspace = true, features = ["std"] }
encointer-node-notee-runtime = { path = "../../runtime" }
encointer-primitives = { workspace = true, features = ["std"] }

substrate-api-client = { workspace = true }
substrate-client-keystore = { workspace = true }

# substrate deps
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
