[package]
name = "encointer-api-client-extension"
version = "0.8.2"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
maybe-async = { workspace = true }
parity-scale-codec = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true }

# encointer deps
encointer-ceremonies-assignment = { workspace = true, features = ["std"] }
encointer-node-notee-runtime = { path = "../../runtime" }
encointer-primitives = { workspace = true, features = ["std"] }

ac-keystore = { workspace = true }
substrate-api-client = { workspace = true }

# substrate deps
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
